# health-dashboard

./: .env  .env.deploy.example  .env.example  .gitignore  Dockerfile  LICENSE  README.md  chat.py  pyproject.toml  render.yaml
FE/: .env.example  package-lock.json  package.json
FE/.lovable/: plan.md
FE/src/: routeTree.gen.ts  styles.css
app/: __init__.py  db.py  main.py  models.py  router.py  schemas.py
app/api/: routes.py
app/core/: config.py
app/models/: __init__.py  bedrock_client.py  model_client.py  openai_client.py  prompts.py
app/services/: bedrock.py  reporting.py  storage.py
app/tools/: __init__.py  annual_report.py  athena.py  charts.py  confidence.py  location_news.py  map_events.py  pii.py  predictions.py  public_context.py  recommendations.py  report_generator.py  reports.py  schema.py
data/reporting/: ambulance_causes.csv  ambulance_trips.csv  community_workers.csv  locations_master.csv  mchp_patient_support.csv  reporting_catalog.csv  sensitization_activities.csv  tb_patient_journey.csv  uploaded_amb_mchp_2026_06_27.csv  uploaded_donnees_export_2026_06_27.csv  uploaded_donnees_export_2026_06_28.csv
docs/: aws-setup.md
docs/iam/: ecs-deployer-policy.json  ecs-task-role-permissions-policy.json
infra/terraform/: README.md  api_gateway.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf  (+1 more)
scripts/: deploy.sh  render-deploy-env.py  render-deploy-env.sh
tests/: test_app.py  test_model_client.py  test_openai_client.py  test_pii_upload.py  test_public_context.py  test_response_schema.py  test_router.py  test_sql_guardrails.py
(+44 files in other folders)
